--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,8 +1,10 @@
-allow_embedding: false
-package_name: Open_Source_Forms
-db_schema: []
-name: Open Source Forms
-startup_form: Form1
-renamed: true
-runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox}
 services: []
+startup: {type: module, module: start_up}
+package_name: Open_Source_Forms
+allow_embedding: false
+name: Open Source Forms
+runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox}
+metadata: {}
+native_deps: {head_html: ''}
+db_schema: []
+renamed: true
