--- a/client_code/form/main/form_template.yaml
+++ b/client_code/form/main/form_template.yaml
@@ -2,6 +2,7 @@ is_package: true
 container:
   type: HtmlTemplate
   properties: {html: '@theme:standard-page.html'}
+  event_bindings: {}
 components:
 - type: ColumnPanel
   properties: {}
