--- a/client_code/widgets/section/form_template.yaml
+++ b/client_code/widgets/section/form_template.yaml
@@ -1,7 +1,9 @@
 container:
   type: ColumnPanel
   event_bindings: {show: form_show}
-  properties: {col_widths: '{}'}
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    spacing_below: large, background: ''}
 components:
 - type: Link
   properties: {col_widths: '{}'}
