--- a/client_code/widgets/section/form_template.yaml
+++ b/client_code/widgets/section/form_template.yaml
@@ -6,18 +6,26 @@ container:
     spacing_below: large, background: ''}
 components:
 - type: Link
-  properties: {col_widths: '{}'}
+  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+    spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link
   layout_properties: {grid_position: 'KAFFVF,RRYKMZ'}
   event_bindings: {click: section_select}
   components:
   - type: TextBox
     properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: section title,
-      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-      font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
-      background: '', bold: false, underline: false}
+      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 30,
+      font: '', spacing_above: small, type: text, spacing_below: none, italic: false,
+      background: '', bold: true, underline: false}
     name: text_box_title
     layout_properties: {grid_position: 'UMZKZH,HRVFFH'}
+    event_bindings: {}
+  - type: Spacer
+    properties: {height: 32}
+    name: spacer_1
+    layout_properties: {grid_position: 'CLTWLQ,RUMFVD'}
   - type: ColumnPanel
     properties: {}
     name: column_panel
