--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -29,6 +29,8 @@ roles:
   components: [TextBox]
 - name: selected
   components: [Link]
+- {name: section_no_shadow}
+- {name: section_shadow}
 color_scheme:
   preset_groups:
   - name: Primary Colour
