--- a/client_code/widgets/toolbar/form_template.yaml
+++ b/client_code/widgets/toolbar/form_template.yaml
@@ -3,6 +3,10 @@ container:
   event_bindings: {}
   properties: {col_widths: '{}'}
 components:
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'DPFLSI,ULSUSB'}
 - type: FlowPanel
   properties: {}
   name: flow_panel
@@ -17,7 +21,7 @@ components:
       italic: false, background: '', bold: false, underline: false, icon: 'fa:minus-circle'}
     name: link_1
     layout_properties: {grid_position: 'FGNBHC,PSJCCL'}
-    event_bindings: {click: widget_control}
+    event_bindings: {click: remove_parent}
   - type: Link
     properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
@@ -25,7 +29,7 @@ components:
       italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-up'}
     name: link_2
     layout_properties: {}
-    event_bindings: {click: widget_control}
+    event_bindings: {click: move_up}
   - type: Link
     properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
@@ -33,6 +37,6 @@ components:
       italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-down'}
     name: link_3
     layout_properties: {}
-    event_bindings: {click: widget_control}
+    event_bindings: {}
   event_bindings: {}
 is_package: true
