--- a/client_code/widgets/toolbar/form_template.yaml
+++ b/client_code/widgets/toolbar/form_template.yaml
@@ -19,7 +19,7 @@ components:
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
       italic: false, background: '', bold: false, underline: false, icon: 'fa:minus-circle'}
-    name: link_1
+    name: link_minus
     layout_properties: {grid_position: 'FGNBHC,PSJCCL'}
     event_bindings: {click: remove_parent}
   - type: Link
@@ -27,7 +27,7 @@ components:
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
       italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-up'}
-    name: link_2
+    name: link_up
     layout_properties: {}
     event_bindings: {click: move_widget}
   - type: Link
@@ -35,7 +35,7 @@ components:
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
       italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-down'}
-    name: link_3
+    name: link_down
     layout_properties: {}
     event_bindings: {click: move_widget}
   event_bindings: {}
