--- a/anvil.yaml
+++ b/anvil.yaml
@@ -15,7 +15,7 @@ db_schema:
   python_name: forms
   columns:
     0LurdekMZ08=:
-      name: form
+      name: schema
       type: simpleObject
       admin_ui: {order: 3, width: 200}
     CvauOTiUFnE=:
