--- a/client_code/widgets/date/form_template.yaml
+++ b/client_code/widgets/date/form_template.yaml
@@ -9,7 +9,7 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_title
-  layout_properties: {grid_position: 'LTGCKR,MZOAAO'}
+  layout_properties: {grid_position: 'VKHACT,SRRNVD'}
   event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: placeholder,
@@ -17,6 +17,14 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_placeholder
-  layout_properties: {grid_position: 'DUXWWE,LQDPWF'}
+  layout_properties: {grid_position: 'WXIQBS,ZZNLRH'}
+  event_bindings: {}
+- type: TextBox
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: format,
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+    font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false}
+  name: text_box_format
+  layout_properties: {grid_position: 'GUHKAD,CAKDSI'}
   event_bindings: {}
 is_package: true
