--- a/client_code/widgets/drop_down/form_template.yaml
+++ b/client_code/widgets/drop_down/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
-  event_bindings: {}
   properties: {col_widths: '{}'}
+  event_bindings: {}
 components:
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: title,
@@ -9,7 +9,7 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_title
-  layout_properties: {grid_position: 'LTGCKR,MZOAAO'}
+  layout_properties: {grid_position: 'PTEPFO,HHFUFF'}
   event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: placeholder,
@@ -17,6 +17,14 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_placeholder
-  layout_properties: {grid_position: 'DUXWWE,LQDPWF'}
+  layout_properties: {grid_position: 'QRJROZ,YUNJGY'}
+  event_bindings: {}
+- type: TextArea
+  properties: {role: null, align: left, height: 66, tooltip: '', placeholder: newline separated list of options,
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+    auto_expand: true, font: '', spacing_above: small, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false}
+  name: text_area_options
+  layout_properties: {grid_position: 'KHMGZE,ZMOGBD'}
   event_bindings: {}
 is_package: true
