--- a/client_code/widgets/date/form_template.yaml
+++ b/client_code/widgets/date/form_template.yaml
@@ -1,15 +1,22 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-  properties: {col_widths: '{}'}
+  properties: {role: null, tooltip: '', border: '', foreground: 'theme:Black', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"MAYVHZ":55,"TSZWEA":5}',
+    spacing_below: small, background: ''}
 components:
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'RLOLJW,MAYVHZ GMOGUR,LUABZO'}
+  event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: title,
     border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_title
-  layout_properties: {grid_position: 'VKHACT,SRRNVD'}
+  layout_properties: {grid_position: 'RLOLJW,MAYVHZ VKHACT,SRRNVD'}
   event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: placeholder,
@@ -17,7 +24,7 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_placeholder
-  layout_properties: {grid_position: 'WXIQBS,ZZNLRH'}
+  layout_properties: {grid_position: 'RLOLJW,MAYVHZ WXIQBS,ZZNLRH'}
   event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: format,
@@ -25,6 +32,14 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_format
-  layout_properties: {grid_position: 'GUHKAD,CAKDSI'}
+  layout_properties: {grid_position: 'RLOLJW,MAYVHZ GUHKAD,CAKDSI'}
+  event_bindings: {}
+- type: Label
+  properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Black',
+    visible: true, text: id, font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: 'fa:calendar'}
+  name: label_id
+  layout_properties: {grid_position: 'RLOLJW,TSZWEA'}
   event_bindings: {}
 is_package: true
