--- a/client_code/widgets/drop_down/form_template.yaml
+++ b/client_code/widgets/drop_down/form_template.yaml
@@ -1,15 +1,22 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, tooltip: '', border: '', foreground: 'theme:Black', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"NOYWZM":55,"TPCQDN":5}',
+    spacing_below: small, background: ''}
   event_bindings: {}
 components:
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'QXGFOB,NOYWZM IHBSVL,TGTQPA'}
+  event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: title,
     border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_title
-  layout_properties: {grid_position: 'PTEPFO,HHFUFF'}
+  layout_properties: {grid_position: 'QXGFOB,NOYWZM PTEPFO,HHFUFF'}
   event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: placeholder,
@@ -17,7 +24,7 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_placeholder
-  layout_properties: {grid_position: 'QRJROZ,YUNJGY'}
+  layout_properties: {grid_position: 'QXGFOB,NOYWZM QRJROZ,YUNJGY'}
   event_bindings: {}
 - type: TextArea
   properties: {role: null, align: left, height: 66, tooltip: '', placeholder: newline separated list of options,
@@ -25,6 +32,14 @@ components:
     auto_expand: true, font: '', spacing_above: small, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_area_options
-  layout_properties: {grid_position: 'KHMGZE,ZMOGBD'}
+  layout_properties: {grid_position: 'QXGFOB,NOYWZM KHMGZE,ZMOGBD'}
+  event_bindings: {}
+- type: Label
+  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+    visible: true, text: id, font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: 'fa:list-ul'}
+  name: label_id
+  layout_properties: {grid_position: 'QXGFOB,TPCQDN'}
   event_bindings: {}
 is_package: true
