--- a/client_code/widgets/section/form_template.yaml
+++ b/client_code/widgets/section/form_template.yaml
@@ -8,8 +8,9 @@ components:
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
     visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-    spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
+    spacing_above: small, icon_align: left, col_widths: '{"ZAUZQL":57,"BCGWXO":3}',
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
   name: link
   layout_properties: {grid_position: 'KAFFVF,RRYKMZ'}
   event_bindings: {click: section_select}
@@ -20,15 +21,23 @@ components:
       font: '', spacing_above: small, type: text, spacing_below: none, italic: false,
       background: '', bold: true, underline: false}
     name: text_box_title
-    layout_properties: {grid_position: 'UMZKZH,HRVFFH'}
+    layout_properties: {grid_position: 'CDDBFY,ZAUZQL UMZKZH,HRVFFH'}
     event_bindings: {}
   - type: Spacer
     properties: {height: 32}
     name: spacer_1
-    layout_properties: {grid_position: 'CLTWLQ,RUMFVD'}
+    layout_properties: {grid_position: 'CDDBFY,ZAUZQL CLTWLQ,RUMFVD'}
   - type: ColumnPanel
     properties: {}
     name: column_panel
-    layout_properties: {grid_position: 'SMWHEZ,JKOVZI'}
+    layout_properties: {grid_position: 'CDDBFY,ZAUZQL SMWHEZ,JKOVZI'}
+    event_bindings: {}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: false, text: id, font_size: null, font: '', spacing_above: small, icon_align: left,
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
+    name: label_id
+    layout_properties: {grid_position: 'CDDBFY,BCGWXO'}
     event_bindings: {}
 is_package: true
