--- a/client_code/user_widgets/text_box/form_template.yaml
+++ b/client_code/user_widgets/text_box/form_template.yaml
@@ -6,9 +6,12 @@ container:
     spacing_below: small, background: ''}
 components:
 - type: Label
-  properties: {}
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: '', font_size: 20, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
   name: label_title
   layout_properties: {grid_position: 'LJTUHQ,BNXSWP'}
+  event_bindings: {}
 - type: TextBox
   properties: {}
   name: text_box
