--- a/client_code/widgets/drop_down/form_template.yaml
+++ b/client_code/widgets/drop_down/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: 'theme:Black', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"NOYWZM":55,"TPCQDN":5}',
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"NOYWZM":55,"TPCQDN":5,"OEJLWE":11,"HHFUFF":49,"MQTUFB":11,"YUNJGY":49,"IVWBPJ":11,"ZMOGBD":49}',
     spacing_below: small, background: ''}
   event_bindings: {}
 components:
@@ -10,25 +10,49 @@ components:
   name: spacer_1
   layout_properties: {grid_position: 'QXGFOB,NOYWZM IHBSVL,TGTQPA'}
   event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'title:', font_size: 14, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_1
+  layout_properties: {grid_position: 'QXGFOB,NOYWZM PTEPFO,OEJLWE'}
+  event_bindings: {}
 - type: TextBox
-  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: title,
-    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 14,
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_title
   layout_properties: {grid_position: 'QXGFOB,NOYWZM PTEPFO,HHFUFF'}
   event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'placeholder:', font_size: 14, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_2
+  layout_properties: {grid_position: 'QXGFOB,NOYWZM QRJROZ,MQTUFB'}
+  event_bindings: {}
 - type: TextBox
-  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: placeholder,
-    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 14,
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_placeholder
   layout_properties: {grid_position: 'QXGFOB,NOYWZM QRJROZ,YUNJGY'}
   event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'options:', font_size: 14, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_3
+  layout_properties: {grid_position: 'QXGFOB,NOYWZM KHMGZE,IVWBPJ'}
+  event_bindings: {}
 - type: TextArea
-  properties: {role: null, align: left, height: 66, tooltip: '', placeholder: newline separated list of options,
-    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+  properties: {role: null, align: left, height: 66, tooltip: '', placeholder: newline separated list,
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 14,
     auto_expand: true, font: '', spacing_above: small, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_area_options
