--- a/client_code/widgets/radio_button/form_template.yaml
+++ b/client_code/widgets/radio_button/form_template.yaml
@@ -1,53 +1,43 @@
 container:
   type: ColumnPanel
   event_bindings: {}
+  properties: {col_widths: '{"OUPZTP":55,"SVULFZ":5,"CJEHIR":10,"QOVVZB":50,"NKWHKN":10,"BGHBQJ":50}'}
 components:
 - type: Spacer
   properties: {height: 32}
   name: spacer_1
-  layout_properties:
-    col_widths: {}
-    grid_position: EHVDKA,DRZGNY
+  layout_properties: {grid_position: 'YRHXFN,OUPZTP'}
 - type: Label
   properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Black',
     visible: true, text: id, font_size: null, font: '', spacing_above: small, icon_align: left,
     spacing_below: small, italic: false, background: '', bold: false, underline: false,
-    icon: 'fa:check-square'}
+    icon: 'fa:dot-circle-o'}
   name: label_id
-  layout_properties:
-    col_widths: {}
-    grid_position: TACGPZ,ZKYJWA
+  layout_properties: {grid_position: 'YRHXFN,SVULFZ'}
+  event_bindings: {}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
     visible: true, text: 'title:', font_size: null, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: true, background: '', bold: false,
     underline: false, icon: ''}
   name: label_1
-  layout_properties:
-    col_widths: {}
-    grid_position: LPMLBZ,DPUEFS
+  layout_properties: {grid_position: 'VZJQVP,CJEHIR'}
+  event_bindings: {}
+- type: TextBox
+  properties: {}
+  name: text_box_title
+  layout_properties: {grid_position: 'VZJQVP,QOVVZB'}
+  event_bindings: {}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
     visible: true, text: 'options:', font_size: null, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: true, background: '', bold: false,
     underline: false, icon: ''}
   name: label_2
-  layout_properties:
-    col_widths: {}
-    grid_position: WSHQQM,ICXFQR
-- type: TextBox
-  properties: {}
-  name: text_box_title
-  layout_properties:
-    col_widths: {}
-    grid_position: TPZFQP,TTFQVI
+  layout_properties: {grid_position: 'IQUTNR,NKWHKN'}
+  event_bindings: {}
 - type: TextArea
-  properties: {role: null, align: left, height: '', tooltip: '', placeholder: newline separated list,
-    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-    auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
-    background: '', bold: false, underline: false}
+  properties: {}
   name: text_area_options
-  layout_properties:
-    col_widths: {}
-    grid_position: FZMDJR,XOTTOF
+  layout_properties: {grid_position: 'IQUTNR,BGHBQJ'}
 is_package: true
