--- a/client_code/widgets/text_area/form_template.yaml
+++ b/client_code/widgets/text_area/form_template.yaml
@@ -1,19 +1,27 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-  properties: {col_widths: '{"JUTUFE":55,"TRYKVB":5,"KYXTCQ":11,"MZOAAO":49,"MSQNHR":11,"LQDPWF":49}'}
+  properties: {col_widths: '{"HPIGIV":5,"ACXKXT":10,"SUJGYL":50,"WDLOOW":10,"LQFXZY":50,"HBCXSZ":55}'}
 components:
 - type: Spacer
   properties: {height: 32}
   name: spacer_1
-  layout_properties: {grid_position: 'LIKVTP,JUTUFE TSOUNU,BQIYHP'}
+  layout_properties: {grid_position: 'LIYQZV,HBCXSZ'}
+- type: Label
+  properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Black',
+    visible: true, text: id, font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: 'fa:text-height'}
+  name: label_id
+  layout_properties: {grid_position: 'LIYQZV,HPIGIV'}
+  event_bindings: {}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
     visible: true, text: 'title:', font_size: 14, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: true, background: '', bold: false,
     underline: false, icon: ''}
-  name: label_1
-  layout_properties: {grid_position: 'LIKVTP,JUTUFE LTGCKR,KYXTCQ'}
+  name: label_3
+  layout_properties: {grid_position: 'ZQTIJV,ACXKXT'}
   event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
@@ -21,7 +29,7 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_title
-  layout_properties: {grid_position: 'LIKVTP,JUTUFE LTGCKR,MZOAAO'}
+  layout_properties: {grid_position: 'ZQTIJV,SUJGYL'}
   event_bindings: {}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
@@ -29,7 +37,7 @@ components:
     icon_align: left, spacing_below: small, italic: true, background: '', bold: false,
     underline: false, icon: ''}
   name: label_2
-  layout_properties: {grid_position: 'LIKVTP,JUTUFE DUXWWE,MSQNHR'}
+  layout_properties: {grid_position: 'FPVWHS,WDLOOW'}
   event_bindings: {}
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
@@ -37,14 +45,6 @@ components:
     font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_box_placeholder
-  layout_properties: {grid_position: 'LIKVTP,JUTUFE DUXWWE,LQDPWF'}
-  event_bindings: {}
-- type: Label
-  properties: {role: null, align: center, tooltip: '', border: '', foreground: 'theme:Black',
-    visible: true, text: id, font_size: null, font: '', spacing_above: small, icon_align: left,
-    spacing_below: small, italic: false, background: '', bold: false, underline: false,
-    icon: 'fa:text-width'}
-  name: label_id
-  layout_properties: {grid_position: 'LIKVTP,TRYKVB'}
+  layout_properties: {grid_position: 'FPVWHS,LQFXZY'}
   event_bindings: {}
 is_package: true
