--- a/client_code/user_widgets/slider/form_template.yaml
+++ b/client_code/user_widgets/slider/form_template.yaml
@@ -1,26 +1,34 @@
 container:
-  type: ColumnPanel
+  type: HtmlTemplate
+  properties: {tooltip: '', background: '', foreground: '', border: '', visible: true,
+    role: null, html: ''}
   event_bindings: {show: form_show}
-  properties: {col_widths: '{}'}
 components:
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
-    visible: true, text: '', font_size: 20, font: '', spacing_above: small, icon_align: left,
-    spacing_below: small, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: label_title
-  layout_properties: {grid_position: 'PXKZEP,VVYDEX'}
-- type: form:user_widgets.utilities.slider_custom
-  properties: {}
-  name: slider
-  layout_properties: {grid_position: 'IMRIBL,DQJFWC'}
-  event_bindings: {change: slider_change}
-- type: Label
-  properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-    visible: true, text: '', font_size: 15, font: '', spacing_above: none, icon_align: left,
-    spacing_below: small, italic: false, background: '', bold: true, underline: false,
-    icon: ''}
-  name: label_value
-  layout_properties: {grid_position: 'SIPUVN,UCXCKQ'}
+- type: ColumnPanel
+  properties: {col_widths: '{}'}
+  name: column_panel_1
+  layout_properties: {slot: default}
   event_bindings: {}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
+      visible: true, text: '', font_size: 20, font: '', spacing_above: small, icon_align: left,
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
+    name: label_title
+    layout_properties: {slot: default, grid_position: 'QICNUQ,KANBSL'}
+    event_bindings: {}
+  - type: form:user_widgets.utilities.slider_custom
+    properties: {}
+    name: slider
+    layout_properties: {slot: default, grid_position: 'VHLLMQ,ALUHGU'}
+    event_bindings: {change: slider_change}
+  - type: Label
+    properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: 15, font: '', spacing_above: small, icon_align: left,
+      spacing_below: small, italic: false, background: '', bold: true, underline: false,
+      icon: ''}
+    name: label_value
+    layout_properties: {slot: default, grid_position: 'OPWRFF,VJAJKD'}
+    event_bindings: {show: form_show}
 is_package: true
