--- a/client_code/user_widgets/section/form_template.yaml
+++ b/client_code/user_widgets/section/form_template.yaml
@@ -6,7 +6,10 @@ container:
     spacing_below: large, background: ''}
 components:
 - type: Link
-  properties: {col_widths: '{}'}
+  properties: {role: no_drag, url: '', align: left, tooltip: '', border: '', foreground: '',
+    visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+    spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link
   layout_properties: {grid_position: 'PSLOSL,TSYDRS'}
   components:
