--- a/client_code/user_widgets/section/form_template.yaml
+++ b/client_code/user_widgets/section/form_template.yaml
@@ -5,30 +5,21 @@ container:
     wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
     spacing_below: large, background: ''}
 components:
-- type: Link
-  properties: {role: no_drag, url: '', align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-    spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-    italic: false, background: '', bold: false, underline: false, icon: ''}
-  name: link
-  layout_properties: {grid_position: 'PSLOSL,TSYDRS'}
-  components:
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
-      visible: true, text: '', font_size: 30, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: true, underline: false,
-      icon: ''}
-    name: label_title
-    layout_properties: {grid_position: 'TAPFYR,BSPLGK'}
-    event_bindings: {}
-  - type: Spacer
-    properties: {height: 32}
-    name: spacer_1
-    layout_properties: {grid_position: 'GANNHD,HGFQGQ'}
-    event_bindings: {}
-  - type: ColumnPanel
-    properties: {}
-    name: column_panel
-    layout_properties: {grid_position: 'WIFLIP,BNJACQ'}
-  event_bindings: {click: section_select}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Black',
+    visible: true, text: '', font_size: 30, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: true, underline: false,
+    icon: ''}
+  name: label_title
+  layout_properties: {grid_position: 'VALIEQ,PQZLYJ'}
+  event_bindings: {}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'UFOXKK,USWJFJ'}
+  event_bindings: {}
+- type: ColumnPanel
+  properties: {}
+  name: column_panel
+  layout_properties: {grid_position: 'EOGGHR,MQCSPB'}
 is_package: true
