--- a/client_code/widgets/section/form_template.yaml
+++ b/client_code/widgets/section/form_template.yaml
@@ -2,42 +2,31 @@ container:
   type: ColumnPanel
   event_bindings: {show: form_show}
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"MWRTBR":56,"COJBQY":4}',
     spacing_below: large, background: ''}
 components:
-- type: Link
-  properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-    spacing_above: small, icon_align: left, col_widths: '{"ZAUZQL":57,"BCGWXO":3,"HRVFFH":55}',
-    spacing_below: small, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: link
-  layout_properties: {grid_position: 'KAFFVF,RRYKMZ'}
-  event_bindings: {click: section_select}
-  components:
-  - type: TextBox
-    properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: title,
-      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 20,
-      font: '', spacing_above: small, type: text, spacing_below: none, italic: false,
-      background: '', bold: true, underline: false}
-    name: text_box_title
-    layout_properties: {grid_position: 'CDDBFY,ZAUZQL UMZKZH,HRVFFH'}
-    event_bindings: {}
-  - type: Spacer
-    properties: {height: 32}
-    name: spacer_1
-    layout_properties: {grid_position: 'CDDBFY,ZAUZQL CLTWLQ,RUMFVD'}
-  - type: ColumnPanel
-    properties: {}
-    name: column_panel
-    layout_properties: {grid_position: 'CDDBFY,ZAUZQL SMWHEZ,JKOVZI'}
-    event_bindings: {}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: false, text: id, font_size: null, font: '', spacing_above: small, icon_align: left,
-      spacing_below: small, italic: false, background: '', bold: false, underline: false,
-      icon: ''}
-    name: label_id
-    layout_properties: {grid_position: 'CDDBFY,BCGWXO'}
-    event_bindings: {}
+- type: TextBox
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: title,
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 20,
+    font: '', spacing_above: small, type: text, spacing_below: none, italic: false,
+    background: '', bold: true, underline: false}
+  name: text_box_title
+  layout_properties: {grid_position: 'LYWUWA,MWRTBR'}
+  event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: false,
+    text: id, font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: label_id
+  layout_properties: {grid_position: 'LYWUWA,COJBQY'}
+  event_bindings: {}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'IPJPUT,ZDSUUJ'}
+- type: ColumnPanel
+  properties: {}
+  name: column_panel
+  layout_properties: {grid_position: 'WOSXOG,UGIZPU'}
+  event_bindings: {}
 is_package: true
