--- a/client_code/user_widgets/date/form_template.yaml
+++ b/client_code/user_widgets/date/form_template.yaml
@@ -16,4 +16,12 @@ components:
   name: date_picker
   layout_properties: {grid_position: 'NVXOQR,NYAHJW'}
   event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Secondary
+      500', visible: true, text: mandatory, font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: 'fa:asterisk'}
+  name: label_mandatory
+  layout_properties: {grid_position: 'ROGUOR,RBIPJJ'}
+  event_bindings: {}
 is_package: true
