--- a/client_code/user_widgets/text_box/form_template.yaml
+++ b/client_code/user_widgets/text_box/form_template.yaml
@@ -18,4 +18,13 @@ components:
   name: text_box
   layout_properties: {grid_position: 'VAWRXY,WYMZOA'}
   event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: 'theme:Secondary
+      500', visible: true, text: mandatory, font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: 'fa:asterisk'}
+  name: label_mandatory
+  layout_properties:
+    col_widths: {}
+    grid_position: YHHMHW,AUHOST
 is_package: true
