--- a/client_code/widgets/drop_down/form_template.yaml
+++ b/client_code/widgets/drop_down/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: 'theme:Black', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"NOYWZM":55,"TPCQDN":5,"OEJLWE":11,"HHFUFF":49,"MQTUFB":11,"YUNJGY":49,"IVWBPJ":11,"ZMOGBD":49}',
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"NOYWZM":55,"TPCQDN":5,"OEJLWE":11,"HHFUFF":49,"MQTUFB":11,"YUNJGY":49,"IVWBPJ":11,"ZMOGBD":49,"NKIEHF":10,"OAQYOZ":50}',
     spacing_below: small, background: ''}
   event_bindings: {}
 components:
@@ -65,5 +65,19 @@ components:
     icon: 'fa:list-ul'}
   name: label_id
   layout_properties: {grid_position: 'QXGFOB,TPCQDN'}
+  event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'mandatory:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_4
+  layout_properties: {grid_position: 'BGDCJV,NKIEHF'}
+- type: CheckBox
+  properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '',
+    visible: true, text: '', font_size: null, font: '', spacing_above: small, spacing_below: small,
+    italic: false, background: '', bold: false, checked: false, underline: false}
+  name: check_box_mandatory
+  layout_properties: {grid_position: 'BGDCJV,OAQYOZ'}
   event_bindings: {}
 is_package: true
