--- a/client_code/widgets/text_box/form_template.yaml
+++ b/client_code/widgets/text_box/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-  properties: {col_widths: '{"JUTUFE":55,"TRYKVB":5,"KYXTCQ":11,"MZOAAO":49,"MSQNHR":11,"LQDPWF":49}'}
+  properties: {col_widths: '{"JUTUFE":55,"TRYKVB":5,"KYXTCQ":11,"MZOAAO":49,"MSQNHR":11,"LQDPWF":49,"BFJVTS":7,"ISJNWG":39,"ZPOHPE":10,"ZWETMJ":50}'}
 components:
 - type: Spacer
   properties: {height: 32}
@@ -46,5 +46,34 @@ components:
     icon: 'fa:text-width'}
   name: label_id
   layout_properties: {grid_position: 'LIKVTP,TRYKVB'}
+  event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'mandatory:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_3
+  layout_properties: {grid_position: 'NQQVRZ,BFJVTS'}
+  event_bindings: {}
+- type: CheckBox
+  properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '',
+    visible: true, text: '', font_size: null, font: '', spacing_above: small, spacing_below: small,
+    italic: false, background: '', bold: false, checked: false, underline: false}
+  name: check_box_mandatory
+  layout_properties: {grid_position: 'NQQVRZ,ISJNWG'}
+  event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'number:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_4
+  layout_properties: {grid_position: 'OVKGKX,ZPOHPE'}
+- type: CheckBox
+  properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '',
+    visible: true, text: '', font_size: null, font: '', spacing_above: small, spacing_below: small,
+    italic: false, background: '', bold: false, checked: false, underline: false}
+  name: check_box_number
+  layout_properties: {grid_position: 'OVKGKX,ZWETMJ'}
   event_bindings: {}
 is_package: true
