--- a/client_code/widgets/toolbar/form_template.yaml
+++ b/client_code/widgets/toolbar/form_template.yaml
@@ -38,5 +38,13 @@ components:
     name: link_down
     layout_properties: {}
     event_bindings: {click: move_widget}
+  - type: Link
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: 20, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:code-fork'}
+    name: link_branch
+    layout_properties: {}
+    event_bindings: {click: click_branch}
   event_bindings: {}
 is_package: true
