--- a/client_code/landing/select_form/form_template.yaml
+++ b/client_code/landing/select_form/form_template.yaml
@@ -66,8 +66,8 @@ components:
   layout_properties: {slot: nav-right}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: 'OpenQuestion: The open source survey application', font_size: null, font: '',
-    spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '',
-    bold: false, underline: false, icon: ''}
+    text: OpenQuestion, font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
   name: label_3
   layout_properties: {slot: title}
