--- a/client_code/landing/select_form/select_form_row/form_template.yaml
+++ b/client_code/landing/select_form/select_form_row/form_template.yaml
@@ -17,7 +17,7 @@ components:
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_charts
   layout_properties: {column: HKBRYX}
-  event_bindings: {}
+  event_bindings: {click: charts_click}
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
     visible: true, text: data, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
