--- a/client_code/reports/widgets/section/form_template.yaml
+++ b/client_code/reports/widgets/section/form_template.yaml
@@ -1,6 +1,7 @@
 container:
   type: ColumnPanel
   event_bindings: {show: form_show}
+  properties: {col_widths: '{"CTBJKH":55,"RFLQXU":5}'}
 components:
 - type: TextBox
   properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: title,
@@ -10,25 +11,21 @@ components:
   name: text_box_title
   layout_properties:
     col_widths: {}
-    grid_position: XVIGTM,UEHXRO NQNNXG,WGIQYA
-- type: Spacer
-  properties: {height: 32}
-  name: spacer_1
-  layout_properties:
-    col_widths: {}
-    grid_position: XVIGTM,UEHXRO FUWXUC,KVPMOI
-- type: ColumnPanel
-  properties: {}
-  name: column_panel
-  layout_properties:
-    col_widths: {}
-    grid_position: CQVUGW,KMLTIC
+    grid_position: CQVUGW,CTBJKH
+  event_bindings: {}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: false,
     text: id, font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: label_id
-  layout_properties:
-    col_widths: {}
-    grid_position: EOICXN,THRYXD
+  layout_properties: {grid_position: 'CQVUGW,RFLQXU'}
+  event_bindings: {}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties: {grid_position: 'IGNFFY,UAGFLV'}
+- type: ColumnPanel
+  properties: {}
+  name: column_panel
+  layout_properties: {grid_position: 'AXFTQP,YHAXJK'}
 is_package: true
