--- a/client_code/reports/widgets/toolbar/form_template.yaml
+++ b/client_code/reports/widgets/toolbar/form_template.yaml
@@ -1,5 +1,50 @@
 container:
   type: ColumnPanel
-  event_bindings: {}
-components: []
+  event_bindings: {show: form_show}
+components:
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_1
+  layout_properties:
+    col_widths: {}
+    grid_position: LYMHDU,YPZMMB
+- type: FlowPanel
+  properties: {}
+  name: flow_panel
+  layout_properties:
+    col_widths: {}
+    grid_position: QNPSHI,QKIBKE
+  components:
+  - type: Link
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:minus-circle'}
+    name: link_minus
+    layout_properties: {grid_position: 'FGNBHC,PSJCCL'}
+    event_bindings: {click: remove_parent}
+  - type: Link
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-up'}
+    name: link_up
+    layout_properties: {}
+    event_bindings: {click: move_widget}
+  - type: Link
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-down'}
+    name: link_down
+    layout_properties: {}
+    event_bindings: {click: move_widget}
+  - type: Link
+    properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:eye'}
+    name: link_preview
+    layout_properties: {}
+    event_bindings: {click: preview_widget}
 is_package: true
